--- a/Scripts/RMarkdown - Dygraphs.Rmd
+++ b/Scripts/RMarkdown - Dygraphs.Rmd
@@ -6,36 +6,32 @@ output: html_document
 ---
 
 
-```{r import,echo=FALSE,error=FALSE,warning=FALSE,eval=TRUE}
-pacotes <- ("magrittr","dygraphs", "xts","readxl")
-
-lapply(pacotes,library,character.only=TRUE)
-
-dados_brent <-
-  readxl::read_xls("Brent.xls")
-
-dados_brent <-
-  xts::as.xts(x = dados_brent$Preço_Brent, order.by = dados_brent$Data)
-colnames(dados_brent)[1]<-"Preço_Brent"
-
-```
-
 
 #Gráfico 1: Preço do Petróleo Brent
 
 
-```{r preço, include=FALSE}
-dygraph(dados_brent,
-        main = "Preço do Petróleo Brent") %>% dyLimit(
+```{r preço,echo=FALSE,error=FALSE,warning=FALSE,eval=TRUE}
+
+dados_brent <-
+  readxl::read_xls("C:\\Users\\kmlou\\OneDrive\\Área de Trabalho\\Dygraphs_IV_SER_UFF-master\\Input\\Brent.xls")
+
+dados_brent <-
+  xts::as.xts(x = dados_brent$Preço_Brent, order.by = dados_brent$Data)
+colnames(dados_brent)[1] <- "Preço_Brent"
+
+library(magrittr)
+
+dygraphs::dygraph(dados_brent,
+        main = "Preço do Petróleo Brent") %>% dygraphs::dyLimit(
   9.1,
   label = "preço mínimo",
   labelLoc = "right",
   color = "blue",
   strokePattern = "dashed"
-) %>% dyLimit(
+) %>% dygraphs::dyLimit(
   143.95,
   label = "preço máximo",
   labelLoc = "left",
   color = "red",
-  strokePattern = "dashed"
+  strokePattern = "dashed")
 ```
